--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
                 </div>
                 <ul id="navbar">
                     <li><a href="#">Главная</a></li>
-                    <li id="tours"><a id="tourslink" href="#">Туры</a>
+                    <li id="tours"><p id="tourslink">Туры</p>
                         <ul id="toursmenu" class="visibletour">
                             <li><a href="#">Горящие туры</a></li>
                             <li><a href="#">Поиск тура</a></li>
@@ -36,7 +37,7 @@
                         </ul>    
                     </li>
                     <li><a href="#">Страны</a></li>
-                    <li id="services"><a id="serviseslink" href="#">Услуги</a>
+                    <li id="services"><p id="serviseslink">Услуги</p>
                         <ul id="servisesmenu" class="visibleservises">
                             <li><a href="#">Авиабилеты</a></li>
                             <li><a href="#">Визовая поддержка</a></li>
@@ -51,11 +52,11 @@
             </div>
     </header>
     <main>
-        <div id="mainparent" class="toursmenucontainer">
-                <label for="carousel-1" class="maintour activemenu">Горящие Туры</label>
-                <label   for="carousel-2" class="maintour">Популярные туры</label>
-        </div>
         <div class="carousel">
+                <div id="mainparent" class="toursmenucontainer">
+                        <label for="carousel-1" class="maintour activemenu">Горящие Туры</label>
+                        <label   for="carousel-2" class="maintour">Популярные туры</label>
+                </div>
             <div class="carousel-inner">
                 <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
                 <div class="carousel-item">
@@ -136,36 +137,44 @@
             </div>
             </div>
             <div class="advantagescontainer">
-                <div class="advantages">
-                    <div class="center">
-                            <p>Наши преимущества</p>
-                            <img src="img/21.jpg" alt="">
-                    </div>
-                    <div id="page" class=".custom_scrollbar">
-                            Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море. <br>Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море. <br>Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море. 
+                    <div class="advantages">
+                        <div class="center">
+                                <p>Наши преимущества</p>
+                                <img src="img/21.jpg" alt="">
+                        </div>
+                        <div id="page" class=".custom_scrollbar">
+                                Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море. <br>Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море. <br>Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море. 
+                        </div>
                     </div>
                 </div>
-            </div>
     </main>
     <div id="registration">
-        <div>Хочу предложение по туру</div>
+        <div id="getsentence">Хочу предложение по туру</div>
         <form action="">
             <input type="text" placeholder="Имя">
             <input type="email" placeholder="Email">
             <input type="tel" placeholder="Телефон">
-            <input type="text" placeholder="Страна тура">
+            <input id ="countryid" type="text" placeholder="Страна тура" value="">
+            <div id="countrymenu">
+                <ul id="countries" class="countrieshide">
+                    <li class="val">Турция</li>
+                    <li class="val">Египет</li>
+                    <li class="val">Шри-Ланка</li>
+                    <li class="val">Доминикана</li>
+                </ul>
+            </div>
             <button id="submit" type="submit">Получить предложение</button>
         </form>
     </div>
     <footer>
-        <div class="block">
+        <div class="block" id="mobiledelete">
             <div class="border">
                 <img class="logo" src="img/6.png" alt="logo">
             </div>
             <div class="text border">Кураж тур агенство, которое предоставляет<br> услуги по поиску, оформлению и подбору туров<br> для вас и ваших родных.</div>
             <div><span>Создание сайта</span> &#8212;  <img src="img/logo.png" alt=""></div>            
         </div>
-        <div class="block">
+        <div class="block navigationdelete">
             <p class="headline"><a href="#">НАВИГАЦИЯ</a></p>
             <p class="categories"><a href="#">Главная</a></p>
             <p class="categories"><a href="#">О компании</a></p>
@@ -173,7 +182,7 @@
             <p class="categories"><a href="#">Контакты</a></p>
             <p class="categories"><a href="#">Услуги</a></p>
         </div>
-        <div class="block">
+        <div class="block supportdelete">
             <p class="headline"><a href="#">ПОДДЕРЖКА</a></p>
             <p class="categories"><a href="#">FAQ</a></p>
             <p class="categories"><a href="#">Блог</a></p>
